syntax = "proto3";

package wallet;

option java_package = "org.veriblock.lite.wallet";
option java_outer_classname = "Protos";

message TransactionMeta {
    enum MetaState {
        UNKNOWN = 0;
        PENDING = 1;
        CONFIRMED = 2;
        DEAD = 3;
    }
    bytes tx_id = 1;
    MetaState state = 2;
    bytes appears_in_best_chain_block = 3;
    repeated bytes appears_in_blocks = 4;
    int32 appears_at_height = 5;
    int32 depth = 6;
}

message TransactionInput {
    string address = 1;
    int64 amount = 2;
}

message TransactionOutput {
    string address = 1;
    int64 amount = 2;
}

message MerkleBranch {
    enum SubTree {
        POP_TRANSACTIONS = 0;
        NORMAL_TRANSACTIONS = 1;
        METAPACKAGE = 2;
    }
    bytes subject = 1;
    int32 index = 2;
    repeated bytes merkle_path_hashes = 3;
    SubTree merkle_sub_tree = 4;
}

message WalletTransaction {
    bytes tx_id = 1;
    TransactionInput input = 2;
    repeated TransactionOutput outputs = 3;
    int64 signature_index = 4;
    bytes data = 5;
    MerkleBranch merkle_branch = 6;
    TransactionMeta meta = 7;
    bytes signature = 8;
    bytes public_key = 9;
}

message Wallet {
    string network = 1;
    string address = 2;
    repeated WalletTransaction transactions = 3;
}
