syntax = "proto3";

option java_package = "org.veriblock.miners.pop.storage";

message PublicationData {
    int64 identifier = 1;
    bytes header = 2;
    bytes payout_info = 3;
    bytes veriblock_context = 4;
}

message PoPTransaction {
    string tx_id = 1;
    string address = 2;
    bytes published_block = 3;
    bytes bitcoin_tx = 4;
    string merkle_path = 5;
    bytes block_of_proof = 6;
    repeated bytes bitcoin_context = 7;
    bytes signature = 8;
    bytes public_key = 9;
    int32 network_byte = 10;
}

message VeriBlockPublication {
    PoPTransaction transaction = 1;
    string merkle_path = 2;
    bytes containing_block = 3;
    repeated bytes context = 4;
}

message Event {
    string change = 1;
    int32 timestamp = 2;
}

message WorkflowState {
    string operation_id = 1;
    string chain_id = 2;
    int32 status = 3;
    int32 block_height = 4;
    PublicationData publication_data = 5;
    repeated bytes publication_context = 6;
    repeated bytes publication_btc_context = 7;
    string tx_id = 8;
    bytes block_of_proof = 9;
    string merkle_path = 10;
    bytes keystone_of_proof = 11;
    repeated VeriBlockPublication veriblock_publications = 12;
    string proof_of_proof_id = 13;
    repeated Event change_history = 14;
}
